syntax = "proto3";

package customerservice;


// Define your Customer service and messages here
service CustomerService {
  rpc CreateCustomer (Customer) returns (CustomerResponse);
  rpc ListCustomers (empty) returns (CustomerList); // Use the standard Empty
}
message empty{
}

message Customer {
  int32 customer_id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string password = 5;
  string email = 6;
  string phonenr = 7;
}

message CustomerResponse {
  bool success = 1;
  string message = 2;
  Customer customer = 3;
}

message CustomerList {
  repeated Customer customers = 1;
}